cmake_minimum_required(VERSION 3.10)
project(map)
set(CMAKE_CXX_STANDARD 20)

option(MAP_ENABLE_LEAK_CHECK "Enable leak detection for tests" ON)

if (MAP_ENABLE_LEAK_CHECK)
        if (APPLE)
                set(MAP_SANITIZER_FLAGS "-g -O1 -fno-omit-frame-pointer -fsanitize=address")
        set(MAP_LEAK_ENV "")
        else ()
                set(MAP_SANITIZER_FLAGS "-g -O1 -fno-omit-frame-pointer -fsanitize=address,undefined,leak")
                set(MAP_LEAK_ENV "")
        endif ()
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MAP_SANITIZER_FLAGS}")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${MAP_SANITIZER_FLAGS}")
endif ()

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/data)
add_executable(map_one ${CMAKE_CURRENT_SOURCE_DIR}/data/one/code.cpp)
add_executable(map_two ${CMAKE_CURRENT_SOURCE_DIR}/data/two/code.cpp)
add_executable(map_three ${CMAKE_CURRENT_SOURCE_DIR}/data/three/code.cpp)
add_executable(map_four ${CMAKE_CURRENT_SOURCE_DIR}/data/four/code.cpp)
add_executable(map_five ${CMAKE_CURRENT_SOURCE_DIR}/data/five/code.cpp)
add_executable(map_corner_one ${CMAKE_CURRENT_SOURCE_DIR}/corner_data/1.cpp)
add_executable(map_corner_two ${CMAKE_CURRENT_SOURCE_DIR}/corner_data/2.cpp)
add_executable(map_corner_three ${CMAKE_CURRENT_SOURCE_DIR}/corner_data/3.cpp)

function(add_map_test_with_diff test_name exe_name out_file ans_file diff_file)
    set(TEST_CMD "${CMAKE_CURRENT_BINARY_DIR}/${exe_name} >${out_file} && diff -u ${ans_file} ${out_file}>${diff_file}")
    if (MAP_ENABLE_LEAK_CHECK AND APPLE)
        set(TEST_CMD "${TEST_CMD} && leaks -quiet -atExit -- ${CMAKE_CURRENT_BINARY_DIR}/${exe_name} >/dev/null 2>/tmp/${test_name}_leak.txt")
    endif ()
    add_test(NAME ${test_name} COMMAND sh -c "${TEST_CMD}")
    if (MAP_ENABLE_LEAK_CHECK)
        if (MAP_LEAK_ENV)
            set_tests_properties(${test_name} PROPERTIES ENVIRONMENT "${MAP_LEAK_ENV}")
        endif ()
        set_tests_properties(${test_name} PROPERTIES LABELS "leak")
    endif ()
endfunction()

enable_testing()
add_map_test_with_diff(map_one map_one /tmp/one_out.txt ${CMAKE_CURRENT_SOURCE_DIR}/data/one/answer.txt /tmp/one_diff.txt)
add_map_test_with_diff(map_two map_two /tmp/two_out.txt ${CMAKE_CURRENT_SOURCE_DIR}/data/two/answer.txt /tmp/two_diff.txt)
add_map_test_with_diff(map_three map_three /tmp/three_out.txt ${CMAKE_CURRENT_SOURCE_DIR}/data/three/answer.txt /tmp/three_diff.txt)
add_map_test_with_diff(map_four map_four /tmp/four_out.txt ${CMAKE_CURRENT_SOURCE_DIR}/data/four/answer.txt /tmp/four_diff.txt)
add_map_test_with_diff(map_five map_five /tmp/five_out.txt ${CMAKE_CURRENT_SOURCE_DIR}/data/five/answer.txt /tmp/five_diff.txt)
add_map_test_with_diff(map_corner_one map_corner_one /tmp/corner_one_out.txt ${CMAKE_CURRENT_SOURCE_DIR}/corner_data/1.ans /tmp/corner_one_diff.txt)
add_map_test_with_diff(map_corner_two map_corner_two /tmp/corner_two_out.txt ${CMAKE_CURRENT_SOURCE_DIR}/corner_data/2.ans /tmp/corner_two_diff.txt)
add_map_test_with_diff(map_corner_three map_corner_three /tmp/corner_three_out.txt ${CMAKE_CURRENT_SOURCE_DIR}/corner_data/3.ans /tmp/corner_three_diff.txt)